# tms_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile_cargo  Dockerfile_nix  LICENSE  README.md  build.rs  claude_example_http_poem_psql.txt  claude_example_http_postgres_actix.txt  claude_example_http_postgres_actum.txt  claude_example_http_psql.txt  claude_example_poem.rs  flake.nix  loadtest_notes.txt  re-install_tmp.sh
backup/: README.md  backup_tms_server.sh
deployment/: Dockerfile_cargo  README.md  docker-compose.yml  docker_build_publish.sh  install.sh  local.env  migrate_from_sqlite.sh  start_postgres.sh  stop_postgres.sh  tms-postgres.yml  tms_drop_db.sh  tms_init_db.sh  tms_server_openapi.yml  tms_server_spec.yml
deployment/docker/: Dockerfile  Dockerfile_cargo  Dockerfile_nix  Dockerfile_tmp  README-DOCKER.md  docker-compose.yml  docker-compose_down.sh  docker-compose_up.sh  docker_build.sh  docker_install.sh  docker_kill.sh  docker_push.sh  docker_run.sh  docker_stop.sh
deployment/native/: README-LOCAL.md  README-NATIVE.md  README-NIX.md  cert.path  install_030.sh  install_030_bak.sh  install_040.sh  key.path  native_build_install_tms.sh  native_copy_certs.sh  tms_server.service  uninstall_030.sh  uninstall_040.sh  upgrade.sh  upgrade_020_030.sh
deployment/nix/: Dockerfile_nix  README-NIX.md
deployment/postgres/: tms-postgres.yml  tms_init_db.sh
migrate_to_psql/: README.md  gres_r.sh  migrate_from_sqlite.sh
migrations/: 20240315211037_tms_init.sql
nix/: config.nix  init.nix  rust.nix  shell.nix  tms-server.nix
nix/modules/: default.nix  documentation.nix  postgres.nix  rust.nix  shell.nix  tms-server.nix
resources/: install-resources.sh
resources/config/: log4rs.yml  tms.toml
resources/migrations/: 10001_init.sql  10002_add_portal.sql  10002_audit.sql  10002_remove_tenancy.sql  20240315211037_tms_init.sql  20240618140143_audit.sql
resources/migrations_bak/: 10002_audit.sql  20240315211037_tms_init.sql  20240618140143_audit.sql
src/: lib.rs  main.rs  utils.rs  v1.rs
src/utils/: authz.rs  config.rs  db.rs  db_init.rs  db_statements.rs  db_types.rs  errors.rs  keygen.rs  mvp.rs  tms_utils.rs
src_v1_tms/: delegations_delete.rs  delegations_list.rs  hosts_delete.rs  hosts_get.rs  pubkeys_list.rs  reservations_create.rs  reservations_delete_related.rs  reservations_extend.rs  reservations_get.rs  user_hosts_get.rs  user_hosts_list.rs  user_hosts_update.rs  user_mfa_create.rs  user_mfa_delete.rs  user_mfa_get.rs  user_mfa_list.rs
test/: create_user_keypairs.sh  fetch_pubkeys.sh  local.env  local_install.env  reset_test_install_030.sh  reset_test_upgrade_020_030.sh  reset_tms_test.sh  seed_user_records.sh  test_install_030.sh  test_install_dev.env  test_install_dev_030.sh  test_install_local.env  test_install_local_030.sh  test_upgrade_020_030.sh  test_upgrade_dev_030.sh  test_upgrade_local_030.sh  test_upgrade_migrate_sqlite.sh  tms_test_cert.path  tms_test_dev.toml  tms_test_key.path  tms_test_local.toml
(+49 files in other folders)
