[package]
name = "tms_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
path-absolutize = "3.1.1"
poem = { version = "2", features = ["rustls"] }
poem-openapi = { version = "4", features = ["swagger-ui"] }
rustls-pemfile = { version = "2.0.0-alpha.1" }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
shellexpand = "3.1.0"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
toml = "0.8.11"
