[package]
name = "tms_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4"
execute = "0.2.13"
futures = "0.3"
fs-mistrust = "0.7.9"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
path-absolutize = "3.1.1"
poem = { version = "2", features = ["rustls"] }
poem-openapi = { version = "4", features = ["swagger-ui"] }
rustls-pemfile = { version = "2.0.0-alpha.1" }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
shellexpand = "3.1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
ssh-key = { version = "0.6.5", features = [ "alloc" ] }
thiserror = "1.0.57"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
toml = "0.8.11"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[build-dependencies]
build-data = "0.1.5"
