[package]
name = "tms_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
execute = "0.2"
futures = "0.3"
fs-mistrust = "0.7"
glob = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.3"
path-absolutize = "3.1"
poem = { version = "3", features = ["openssl-tls"] }
poem-extensions = "0.9"
poem-openapi = { version = "5", features = ["swagger-ui"] }
rand = { version = "0.8" }
rand_core = "0.6"
rustls-pemfile = { version = "2.2" }
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "3.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
ssh-key = { version = "0.6", features = [ "alloc", "rsa", "ed25519", "ecdsa", "p521" ] }
structopt = {  version = "0.3", features = [ "default" ] }
tera = "1"
thiserror = "1.0"
#tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
users = "0.11"
uuid = { version = "1.10", features = ["v4", "serde"] }

[build-dependencies]
build-data = "0.1.5"

[lints.clippy]
# Allow the TmsResponse enum in pubkeys_retrieve.rs to avoid warnings.
large_enum_variant = "allow"
